48.rc - February 28, 2025
==========================

- Update the selection highlighting to more closely follow the focus
- Fix the focus jumping around on window resize
- Fix custom game's missing icon
- Fix print multiple puzzles dialog's scaling at lower resolutions
- Fix reset puzzle incorrectly affecting the timer after a reload
- Fix show possibilities setter not working after a reload
- Add Accessible label to earmark picker buttons
- Updated translations:
  Daniel Rusek (cs); Bruce Cowan (en_GB); Álvaro Burns (pt_BR).

48.beta - January 31, 2025
==========================

- Add custom accent color palette of 18 colors
- Add support for row/column/block highlighting with accent colors
- Update selection and highlighter colors to use oklab

48.alpha - January 10, 2025
==========================

- Port to blueprints
- Use GtkStack and its animations for the number_picker, play/pause
  and fullscreen/unfullscreen buttons
- Fix Warnings shortcut not working
- Add mouse button binding for Back
- Stop saving elapsed time on game completion when Timer is disabled
- Includes changes from 47.1
- Updated translations:
  Alexander Shopov (bg); Sergio Gil (es); Danial Behzadi (fa); Yaron
  Shahrabani (he); Ekaterine Papava (ka); Juliano de Souza Camargo
  (pt_BR); Sergej A. (ru); Martin (sl); Anders Jonsson (sv); Sabri Ünal
  (tr); Yuri Chornoivan (uk); Luming Zh (zh_CN).

47.1.1 - October 18, 2024
==========================

- Fix metainfo screenshots

47.1 - October 18, 2024
==========================

- Fix tooltip font color in light mode
- Fix a case when the highlighter doesn't get cleared with undo
- Fix view not grabbing the focus on start blocking keyboard shortcuts
- Fix reset zoom shortcut not working
- Fix pause button having no tooltip
- Fix meson build requirements
- Updated translations:
  Martin (sl). Jürgen Benvenuti (de); Hugo Carvalho (pt); Rafael
  Fontenelle (pt_BR); Luming Zh (zh_CN).

47.0 - September 13, 2024
==========================
