@@ -1,6 +1,7 @@
 48.rc - February 28, 2025
 ==========================
 
+- Update tab and ctrl+keys to cycle through cells linearly (#5)
 - Update the selection highlighting to more closely follow the focus
 - Fix the focus jumping around on window resize
 - Fix custom game's missing icon
